Fix : Fixed the Opacity of the background image

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="heading">चालीसा संग्रह</h1>
-    <div class="container">
-      <a href="hanuman-chalisa.html" target="_blank">हनुमान चालीसा</a>
-      <a href="shiv_chalisa.pdf" target="_blank">शिव चालीसा</a>
-      <a href="durga_chalisa.pdf" target="_blank">दुर्गा चालीसा</a>
-      <a href="ram_chalisa.pdf" target="_blank">राम चालीसा</a>
-      <a href="krishna_chalisa.pdf" target="_blank">कृष्ण चालीसा</a>
-      <a href="ganesh_chalisa.pdf" target="_blank">गणेश चालीसा</a>
+    <img src="hanuman ji.jpg" class="bg-img" />
+    <div class="content">
+      <h1 class="heading">चालीसा संग्रह</h1>
+      <div class="container">
+        <a href="hanuman-chalisa.html" target="_blank">हनुमान चालीसा</a>
+        <a href="shiv_chalisa.pdf" target="_blank">शिव चालीसा</a>
+        <a href="durga_chalisa.pdf" target="_blank">दुर्गा चालीसा</a>
+        <a href="ram_chalisa.pdf" target="_blank">राम चालीसा</a>
+        <a href="krishna_chalisa.pdf" target="_blank">कृष्ण चालीसा</a>
+        <a href="ganesh_chalisa.pdf" target="_blank">गणेश चालीसा</a>
+      </div>
     </div>
   </body>
 </html>
