--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="hanuman ji.jpg" class="bg-img" />
     <div class="content">
       <h1 class="heading">चालीसा संग्रह</h1>
       <div class="container">
-        <a href="hanuman-chalisa.html" target="_blank">हनुमान चालीसा</a>
-        <a href="shiv_chalisa.pdf" target="_blank">शिव चालीसा</a>
-        <a href="durga_chalisa.pdf" target="_blank">दुर्गा चालीसा</a>
-        <a href="ram_chalisa.pdf" target="_blank">राम चालीसा</a>
-        <a href="krishna_chalisa.pdf" target="_blank">कृष्ण चालीसा</a>
-        <a href="ganesh_chalisa.pdf" target="_blank">गणेश चालीसा</a>
+        <a href="hanuman-chalisa.html" ">हनुमान चालीसा</a>
+        <a href="shiv-chalisa.html">शिव चालीसा</a>
+        <a href="#" >दुर्गा चालीसा</a>
+        <a href="#" >राम चालीसा</a>
+        <a href="#" >कृष्ण चालीसा</a>
+        <a href="#" >गणेश चालीसा</a>
       </div>
     </div>
   </body>
