Change: Added bg on main page

--- a/hanuman-chalisa.html
+++ b/hanuman-chalisa.html
@@ -11,215 +11,215 @@
       <h1>हनुमान चालीसा</h1>
       <div class="chalisa">
         <div class="doha">
-          <p>
+          <p class="para-hov">
             <span class="doha-bold"> ॥ दोहा ॥ <br /></span> श्रीगुरु चरन सरोज
             रज, निज मन मुकुर सुधारि।<br />
             बरनउँ रघुबर बिमल जसु, जो दायक फल चारि॥
           </p>
 
-          <p>
+          <p class="para-hov">
             बुद्धिहीन तनु जानिके, सुमिरौं पवन कुमार।<br />
             बल बुद्धि विद्या देहु मोहिं, हरहु कलेस विकार॥
           </p>
         </div>
 
-        <p>
+        <p class="para-hov">
           <span class="choupai"> चौपाई <br /></span>
           जय हनुमान ज्ञान गुन सागर।<br />
           जय कपीस तिहुँ लोक उजागर॥
         </p>
 
-        <p>
+        <p class="para-hov">
           राम दूत अतुलित बल धामा।<br />
           अंजनि पुत्र पवनसुत नामा॥
         </p>
 
-        <p>
+        <p class="para-hov">
           महाबीर बिक्रम बजरंगी।<br />
           कुमति निवार सुमति के संगी॥
-        </p>
+        </p class="para-hov">
 
-        <p>
+        <p class="para-hov">
           कंचन बरन बिराज सुबेसा।<br />
           कानन कुंडल कुंचित केसा॥
         </p>
 
-        <p>
+        <p class="para-hov">
           हाथ बज्र औ ध्वजा बिराजै।<br />
           काँधे मूँज जनेऊ साजै॥
         </p>
 
-        <p>
+        <p class="para-hov">
           संकर सुवन केसरी नंदन।<br />
           तेज प्रताप महा जग बंदन॥
         </p>
 
-        <p>
+        <p class="para-hov">
           विद्यावान गुनी अति चातुर।<br />
           राम काज करिबे को आतुर॥
         </p>
 
-        <p>
+        <p class="para-hov">
           प्रभु चरित्र सुनिबे को रसिया।<br />
           राम लखन सीता मन बसिया॥
         </p>
 
-        <p>
+        <p class="para-hov">
           सूक्ष्म रूप धरि सियहिं दिखावा।<br />
           बिकट रूप धरि लंक जरावा॥
         </p>
 
-        <p>
+        <p class="para-hov">
           भीम रूप धरि असुर संहारे।<br />
           रामचंद्र के काज सँवारे॥
         </p>
 
-        <p>
+        <p class="para-hov">
           लाय सजीवन लखन जियाए।<br />
           श्रीरघुबीर हरषि उर लाए॥
         </p>
 
-        <p>
+        <p class="para-hov">
           रघुपति कीन्ही बहुत बड़ाई।<br />
           तुम मम प्रिय भरत सम भाई॥
         </p>
 
-        <p>
+        <p class="para-hov">
           सहस बदन तुम्हरो जस गावैं।<br />
           अस कहि श्रीपति कंठ लगावैं॥
         </p>
 
-        <p>
+        <p class="para-hov">
           सनकादिक ब्रह्मादि मुनीसा।<br />
           नारद सारद सहित अहीसा॥
         </p>
 
-        <p>
+        <p class="para-hov">
           जम कुबेर दिगपाल जहाँ ते।<br />
           कवि कोविद कहि सके कहाँ ते॥
         </p>
 
-        <p>
+        <p class="para-hov">
           तुम उपकार सुग्रीवहिं कीन्हा।<br />
           राम मिलाय राजपद दीन्हा॥
         </p>
 
-        <p>
+        <p class="para-hov">
           तुम्हरो मंत्र विभीषन माना।<br />
           लंकेश्वर भए सब जग जाना॥
         </p>
 
-        <p>
+        <p class="para-hov">
           जुग सहस्त्र जोजन पर भानू।<br />
           लील्यो ताहि मधुर फल जानू॥
         </p>
 
-        <p>
+        <p class="para-hov">
           प्रभु मुद्रिका मेलि मुख माहीं।<br />
           जलधि लांघि गये अचरज नाहीं॥
         </p>
 
-        <p>
+        <p class="para-hov">
           दुर्गम काज जगत के जेते।<br />
           सुगम अनुग्रह तुम्हरे तेते॥
         </p>
 
-        <p>
+        <p class="para-hov">
           राम दुआरे तुम रखवारे।<br />
           होत न आज्ञा बिनु पैसारे॥
         </p>
 
-        <p>
+        <p class="para-hov">
           सब सुख लहै तुम्हारी सरना।<br />
           तुम रक्षक काहू को डर ना॥
         </p>
 
-        <p>
+        <p class="para-hov">
           आपन तेज सम्हारो आपै।<br />
           तीनों लोक हाँक ते काँपै॥
         </p>
 
-        <p>
+        <p class="para-hov">
           भूत पिशाच निकट नहिं आवै।<br />
           महाबीर जब नाम सुनावै॥
         </p>
 
-        <p>
+        <p class="para-hov">
           नासै रोग हरै सब पीरा।<br />
           जपत निरंतर हनुमत बीरा॥
         </p>
 
-        <p>
+        <p class="para-hov">
           संकट से हनुमान छुड़ावै।<br />
           मन क्रम वचन ध्यान जो लावै॥
         </p>
 
-        <p>
+        <p class="para-hov">
           सब पर राम तपस्वी राजा।<br />
           तिनके काज सकल तुम साजा॥
         </p>
 
-        <p>
+        <p class="para-hov">
           और मनोरथ जो कोई लावै।<br />
           सोइ अमित जीवन फल पावै॥
         </p>
 
-        <p>
+        <p class="para-hov">
           चारों जुग परताप तुम्हारा।<br />
           है परसिद्ध जगत उजियारा॥
         </p>
 
-        <p>
+        <p class="para-hov">
           साधु संत के तुम रखवारे।<br />
           असुर निकंदन राम दुलारे॥
         </p>
 
-        <p>
+        <p class="para-hov">
           अष्टसिद्धि नौ निधि के दाता।<br />
           अस बर दीन जानकी माता॥
         </p>
 
-        <p>
+        <p class="para-hov">
           राम रसायन तुम्हरे पासा।<br />
           सदा रहो रघुपति के दासा॥
         </p>
 
-        <p>
+        <p class="para-hov">
           तुम्हरे भजन राम को पावै।<br />
           जनम जनम के दुख बिसरावै॥
         </p>
 
-        <p>
+        <p class="para-hov">
           अंत काल रघुबर पुर जाई।<br />
           जहाँ जन्म हरिभक्त कहाई॥
         </p>
 
-        <p>
+        <p class="para-hov">
           और देवता चित्त न धरई।<br />
           हनुमत सेइ सर्ब सुख करई॥
         </p>
 
-        <p>
+        <p class="para-hov">
           संकट कटै मिटै सब पीरा।<br />
           जो सुमिरै हनुमत बलबीरा॥
         </p>
 
-        <p>
+        <p class="para-hov">
           जय जय जय हनुमान गोसाईं।<br />
           कृपा करहु गुरुदेव की नाईं॥
         </p>
 
-        <p>
+        <p class="para-hov">
           जो शत बार पाठ कर कोई।<br />
           छूटहि बंदि महा सुख होई॥
         </p>
 
-        <p>
+        <p class="para-hov">
           जो यह पढ़ै हनुमान चालीसा।<br />
           होय सिद्धि साखी गौरीसा॥
         </p>
 
-        <p>
+        <p class="para-hov">
           तुलसीदास सदा हरि चेरा।<br />
           कीजै नाथ हृदय महँ डेरा॥
         </p>
