--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <img src="om.jpg" class="bg-img" />
     <div class="content">
       <h1 class="heading">चालीसा संग्रह</h1>
       <div class="container">
