--- a/shiv-chalisa.html
+++ b/shiv-chalisa.html
@@ -11,151 +11,155 @@
       <h1>शिव चालीसा</h1>
       <div class="chalisa">
         <div class="doha">
-          <p>
+          <p class="para-hov">
             <span class="doha-bold"> ॥ दोहा ॥ <br /></span>जय गणेश गिरिजा सुवन,
             मंगल मूल सुजान ।<br />
             कहत अयोध्यादास तुम, देहु अभय वरदान ॥
           </p>
         </div>
 
- <p>
-<span class="choupai"> चौपाई <br /></span>
-<p>जय गिरिजा पति दीन दयाला ।<br>
+  
+
+
+<p class="para-hov">
+  <span class="choupai"> चौपाई <br /></span>
+  जय गिरिजा पति दीन दयाला ।<br>
 सदा करत सन्तन प्रतिपाला ॥</p>
 
-<p>भाल चन्द्रमा सोहत नीके ।<br>
+<p class="para-hov">भाल चन्द्रमा सोहत नीके ।<br>
 कानन कुण्डल नागफनी के ॥</p>
 
-<p>अंग गौर शिर गंग बहाये ।<br>
+<p class="para-hov">अंग गौर शिर गंग बहाये ।<br>
 मुण्डमाल तन क्षार लगाए ॥</p>
 
-<p>वस्त्र खाल बाघम्बर सोहे ।<br>
+<p class="para-hov">वस्त्र खाल बाघम्बर सोहे ।<br>
 छवि को देखि नाग मन मोहे ॥</p>
 
-<p>मैना मातु की हवे दुलारी ।<br>
+<p class="para-hov">मैना मातु की हवे दुलारी ।<br>
 बाम अंग सोहत छवि न्यारी ॥</p>
 
-<p>कर त्रिशूल सोहत छवि भारी ।<br>
+<p class="para-hov">कर त्रिशूल सोहत छवि भारी ।<br>
 करत सदा शत्रुन क्षयकारी ॥</p>
 
-<p>नन्दि गणेश सोहै तहँ कैसे ।<br>
+<p class="para-hov">नन्दि गणेश सोहै तहँ कैसे ।<br>
 सागर मध्य कमल हैं जैसे ॥</p>
 
-<p>कार्तिक श्याम और गणराऊ ।<br>
+<p class="para-hov">कार्तिक श्याम और गणराऊ ।<br>
 या छवि को कहि जात न काऊ ॥</p>
 
-<p>देवन जबहीं जाय पुकारा ।<br>
+<p class="para-hov">देवन जबहीं जाय पुकारा ।<br>
 तब ही दुख प्रभु आप निवारा ॥</p>
 
-<p>किया उपद्रव तारक भारी ।<br>
+<p class="para-hov">किया उपद्रव तारक भारी ।<br>
 देवन सब मिलि तुमहिं जुहारी ॥</p>
 
-<p>तुरत षडानन आप पठायउ ।<br>
+<p class="para-hov">तुरत षडानन आप पठायउ ।<br>
 लवनिमेष महँ मारि गिरायउ ॥</p>
 
-<p>आप जलंधर असुर संहारा ।<br>
+<p class="para-hov">आप जलंधर असुर संहारा ।<br>
 सुयश तुम्हार विदित संसारा ॥</p>
 
-<p>त्रिपुरासुर सन युद्ध मचाई ।<br>
+<p class="para-hov">त्रिपुरासुर सन युद्ध मचाई ।<br>
 सबहिं कृपा कर लीन बचाई ॥</p>
 
-<p>किया तपहिं भागीरथ भारी ।<br>
+<p class="para-hov">किया तपहिं भागीरथ भारी ।<br>
 पुरब प्रतिज्ञा तासु पुरारी ॥</p>
 
-<p>दानिन महँ तुम सम कोउ नाहीं ।<br>
+<p class="para-hov">दानिन महँ तुम सम कोउ नाहीं ।<br>
 सेवक स्तुति करत सदाहीं ॥</p>
 
-<p>वेद नाम महिमा तव गाई।<br>
+<p class="para-hov">वेद नाम महिमा तव गाई।<br>
 अकथ अनादि भेद नहिं पाई ॥</p>
 
-<p>प्रकटी उदधि मंथन में ज्वाला ।<br>
+<p class="para-hov">प्रकटी उदधि मंथन में ज्वाला ।<br>
 जरत सुरासुर भए विहाला ॥</p>
 
-<p>कीन्ही दया तहं करी सहाई ।<br>
+<p class="para-hov">कीन्ही दया तहं करी सहाई ।<br>
 नीलकण्ठ तब नाम कहाई ॥</p>
 
-<p>पूजन रामचन्द्र जब कीन्हा ।<br>
+<p class="para-hov">पूजन रामचन्द्र जब कीन्हा ।<br>
 जीत के लंक विभीषण दीन्हा ॥</p>
 
-<p>सहस कमल में हो रहे धारी ।<br>
+<p class="para-hov">सहस कमल में हो रहे धारी ।<br>
 कीन्ह परीक्षा तबहिं पुरारी ॥</p>
 
-<p>एक कमल प्रभु राखेउ जोई ।<br>
+<p class="para-hov">एक कमल प्रभु राखेउ जोई ।<br>
 कमल नयन पूजन चहं सोई ॥</p>
 
-<p>कठिन भक्ति देखी प्रभु शंकर ।<br>
+<p class="para-hov">कठिन भक्ति देखी प्रभु शंकर ।<br>
 भए प्रसन्न दिए इच्छित वर ॥</p>
 
-<p>जय जय जय अनन्त अविनाशी ।<br>
+<p class="para-hov">जय जय जय अनन्त अविनाशी ।<br>
 करत कृपा सब के घटवासी ॥</p>
 
-<p>दुष्ट सकल नित मोहि सतावै ।<br>
+<p class="para-hov">दुष्ट सकल नित मोहि सतावै ।<br>
 भ्रमत रहौं मोहि चैन न आवै ॥</p>
 
-<p>त्राहि त्राहि मैं नाथ पुकारो ।<br>
+<p class="para-hov">त्राहि त्राहि मैं नाथ पुकारो ।<br>
 येहि अवसर मोहि आन उबारो ॥</p>
 
-<p>लै त्रिशूल शत्रुन को मारो ।<br>
+<p class="para-hov">लै त्रिशूल शत्रुन को मारो ।<br>
 संकट से मोहि आन उबारो ॥</p>
 
-<p>मात-पिता भ्राता सब होई ।<br>
+<p class="para-hov">मात-पिता भ्राता सब होई ।<br>
 संकट में पूछत नहिं कोई ॥</p>
 
-<p>स्वामी एक है आस तुम्हारी ।<br>
+<p class="para-hov">स्वामी एक है आस तुम्हारी ।<br>
 आय हरहु मम संकट भारी ॥</p>
 
-<p>धन निर्धन को देत सदा हीं ।<br>
+<p class="para-hov">धन निर्धन को देत सदा हीं ।<br>
 जो कोई जांचे सो फल पाहीं ॥</p>
 
-<p>अस्तुति केहि विधि करैं तुम्हारी ।<br>
+<p class="para-hov">अस्तुति केहि विधि करैं तुम्हारी ।<br>
 क्षमहु नाथ अब चूक हमारी ॥</p>
 
-<p>शंकर हो संकट के नाशन ।<br>
+<p class="para-hov">शंकर हो संकट के नाशन ।<br>
 मंगल कारण विघ्न विनाशन ॥</p>
 
-<p>योगी यति मुनि ध्यान लगावैं ।<br>
+<p class="para-hov">योगी यति मुनि ध्यान लगावैं ।<br>
 शारद नारद शीश नवावैं ॥</p>
 
-<p>नमो नमो जय नमः शिवाय ।<br>
+<p class="para-hov">नमो नमो जय नमः शिवाय ।<br>
 सुर ब्रह्मादिक पार न पाय ॥</p>
 
-<p>जो यह पाठ करे मन लाई ।<br>
+<p class="para-hov">जो यह पाठ करे मन लाई ।<br>
 ता पर होत है शम्भु सहाई ॥</p>
 
-<p>ॠनियां जो कोई हो अधिकारी ।<br>
+<p class="para-hov">ॠनियां जो कोई हो अधिकारी ।<br>
 पाठ करे सो पावन हारी ॥</p>
 
-<p>पुत्र हीन कर इच्छा जोई ।<br>
+<p class="para-hov">पुत्र हीन कर इच्छा जोई ।<br>
 निश्चय शिव प्रसाद तेहि होई ॥</p>
 
-<p>पण्डित त्रयोदशी को लावे ।<br>
+<p class="para-hov">पण्डित त्रयोदशी को लावे ।<br>
 ध्यान पूर्वक होम करावे ॥</p>
 
-<p>त्रयोदशी व्रत करै हमेशा ।<br>
+<p class="para-hov">त्रयोदशी व्रत करै हमेशा ।<br>
 ताके तन नहीं रहै कलेशा ॥</p>
 
-<p>धूप दीप नैवेद्य चढ़ावे ।<br>
+<p class="para-hov">धूप दीप नैवेद्य चढ़ावे ।<br>
 शंकर सम्मुख पाठ सुनावे ॥</p>
 
-<p>जन्म जन्म के पाप नसावे ।<br>
+<p class="para-hov">जन्म जन्म के पाप नसावे ।<br>
 अन्त धाम शिवपुर में पावे ॥</p>
 
-<p>कहैं अयोध्यादास आस तुम्हारी ।<br>
+<p class="para-hov">कहैं अयोध्यादास आस तुम्हारी ।<br>
 जानि सकल दुःख हरहु हमारी ॥</p>
 
 
-
- <p class="doha">
+<div class="doha">
+ <p class="para-hov">
 <span class="doha-bold">॥ दोहा ॥<br /></span>
 नित्त नेम कर प्रातः ही,<br>
 पाठ करौं चालीसा ।<br>
 तुम मेरी मनोकामना,<br>
 पूर्ण करो जगदीश ॥</p>
 
-<p>मगसर छठि हेमन्त ॠतु,<br>
+<p class="para-hov">मगसर छठि हेमन्त ॠतु,<br>
 संवत चौसठ जान ।<br>
 अस्तुति चालीसा शिवहि,<br>
 पूर्ण कीन कल्याण ॥</p>
+</div>
         </p>
       </div>
     </div>
