Changes: Changed UI of main page

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="om.jpg" class="bg-img" />
+    <img src="main-bg.jpg" class="bg-img" />
     <div class="content">
       <h1 class="heading">चालीसा संग्रह</h1>
       <div class="container">
-        <a href="hanuman-chalisa.html" ">हनुमान चालीसा</a>
+        <a href="hanuman-chalisa.html">हनुमान चालीसा</a>
         <a href="shiv-chalisa.html">शिव चालीसा</a>
-        <a href="#" >दुर्गा चालीसा</a>
-        <a href="#" >राम चालीसा</a>
-        <a href="#" >कृष्ण चालीसा</a>
-        <a href="#" >गणेश चालीसा</a>
+        <a href="durga-chalisa.html">दुर्गा चालीसा</a>
+        <a href="ram-chalisa.html">राम चालीसा</a>
+        <a href="krishna-chalisa.html">कृष्ण चालीसा</a>
+        <a href="ganesh-chalisa.html">गणेश चालीसा</a>
       </div>
     </div>
   </body>
