Added all Chalisas

--- a/hanuman-chalisa.html
+++ b/hanuman-chalisa.html
@@ -224,11 +224,13 @@
           कीजै नाथ हृदय महँ डेरा॥
         </p>
 
-        <p class="doha">
-          <span class="doha-bold">॥ दोहा ॥<br /></span>
-          पवनतनय संकट हरन, मंगल मूरति रूप।<br />
-          राम लखन सीता सहित, हृदय बसहु सुर भूप॥
-        </p>
+       <div class="doha">
+          <p class="para-hov">
+            <span class="doha-bold">॥ दोहा ॥<br /></span>
+            पवनतनय संकट हरन, मंगल मूरति रूप।<br />
+            राम लखन सीता सहित, हृदय बसहु सुर भूप॥
+          </p>
+       </div>
       </div>
     </div>
   </body>
