Added Images to a new folder

--- a/durga-chalisa.html
+++ b/durga-chalisa.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="d-chalisa.css" />
   </head>
   <body>
-    <img src="maa durga.jpg" class="bg-img" />
+    <img src="img/maa durga.jpg" class="bg-img" />
     <div class="container">
       <h1>दुर्गा चालीसा</h1>
       <div class="chalisa">
