--- a/ganesh-chalisa.html
+++ b/ganesh-chalisa.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="g-chalisa.css" />
   </head>
   <body>
-    <img src="ganesh ji.jpg" class="bg-img" />
+    <img src="img/ganesh ji.jpg" class="bg-img" />
     <div class="container">
       <h1>गणेश चालीसा</h1>
       <div class="chalisa">
