--- a/hanuman-chalisa.html
+++ b/hanuman-chalisa.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="h-chalisa.css" />
   </head>
   <body>
-    <img src="hanuman ji.jpg" class="bg-img" />
+    <img src="img/hanuman ji.jpg" class="bg-img" />
     <div class="container">
       <h1>हनुमान चालीसा</h1>
       <div class="chalisa">
