--- a/krishna-chalisa.html
+++ b/krishna-chalisa.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="k-chalisa.css" />
   </head>
   <body>
-    <img src="shri krishna.jpg" class="bg-img" />
+    <img src="img/shri krishna.jpg" class="bg-img" />
     <div class="container">
       <h1>कृष्ण चालीसा</h1>
       <div class="chalisa">
