--- a/ram-chalisa.html
+++ b/ram-chalisa.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="r-chalisa.css" />
   </head>
   <body>
-    <img src="shree ram.jpg" class="bg-img" />
+    <img src="img/shree ram.jpg" class="bg-img" />
     <div class="container">
       <h1>राम चालीसा</h1>
       <div class="chalisa">
