--- a/shiv-chalisa.html
+++ b/shiv-chalisa.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="s-chalisa.css" />
   </head>
   <body>
-    <img src="shiv ji.jpg" class="bg-img" />
+    <img src="img/shiv ji.jpg" class="bg-img" />
     <div class="container">
       <h1>शिव चालीसा</h1>
       <div class="chalisa">
