--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="main-bg.jpg" class="bg-img" />
+    <img src="img/main-bg.jpg" class="bg-img" />
     <div class="content">
       <h1 class="heading">चालीसा संग्रह</h1>
       <div class="container">
